// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar renders correctly 1`] = `
<div
  className="progress"
>
  <div>
    <div
      className="time-line"
    >
      <span
        className="time-line-progress-bar"
        style={
          Object {
            "width": "33%",
          }
        }
      />
      <input
        onChange={[Function]}
        onInput={[Function]}
        step="0.01"
        type="range"
        value={33}
      />
    </div>
  </div>
  <div
    className="counters"
  >
    <span>
      1234
    </span>
    <span>
      12345
    </span>
  </div>
</div>
`;

exports[`ProgressBar renders correctly without time-line 1`] = `
<div
  className="progress"
>
  <div />
  <div
    className="counters"
  >
    <span>
      1234
    </span>
    <span>
      12345
    </span>
  </div>
</div>
`;
